src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/IdentityCardInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class IdentityCardInvalidException extends RuntimeException {
    public IdentityCardInvalidException(String message) {
        super(message);
    }
}
